--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 
 /SpClient/protobuf-2.6.1
 /SpClient/.vs
+/SpClient/Source/Debug
+SpClient/Bin/EdoyunIMClient.pdb
+SpClient/Bin/EdoyunIMClient.ilk
+SpClient/Bin/EdoyunIMClient.exe
+/SpClient/Bin/Log
+/SpClient/Bin/Users
+/SpClient/Bin/config
+/SpClient/Bin/Users
+/SpClient/Bin
+/SpClient/Bin
