--- a/SpClient/Source/EdoyunIMClient.rc
+++ b/SpClient/Source/EdoyunIMClient.rc
@@ -252,16 +252,16 @@ BEGIN
     EDITTEXT        IDC_EDIT_SERPORT,97,50,61,14,ES_MULTILINE | ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_FILESERVER,162,50,71,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_FILEPORT,238,51,61,14,ES_MULTILINE | ES_AUTOHSCROLL
-    COMBOBOX        IDC_COMBO_PROTYPE,26,102,56,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_EDIT_PROADD,97,102,82,18,ES_MULTILINE | ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_PROPORT,193,102,58,18,ES_MULTILINE | ES_AUTOHSCROLL
     LTEXT           "聊天服务地址 :",IDC_STATIC_SERADDRESS,24,32,55,8
     LTEXT           "聊天端口 :",IDC_STATIC_SERPORT,98,32,38,8
     LTEXT           "文件端口 :",IDC_STATIC_FILEPORT,241,32,33,8
-    LTEXT           "代理服务器类型:",IDC_STA_PROTYPE,24,87,60,9
-    LTEXT           "代理服务器地址:",IDC_STA_PROADD,98,87,60,9
-    LTEXT           "代理服务器端口:",IDC_STA_PROPORT,193,87,60,9
     LTEXT           "文件服务地址：",IDC_STATIC_FILESERVER,164,32,55,8
+    COMBOBOX        IDC_COMBO_PROTYPE,26,102,56,30,CBS_DROPDOWN | CBS_SORT | NOT WS_VISIBLE | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "代理服务器类型:",IDC_STA_PROTYPE,24,87,60,9,NOT WS_VISIBLE
+    EDITTEXT        IDC_EDIT_PROADD,97,102,82,18,ES_MULTILINE | ES_AUTOHSCROLL | NOT WS_VISIBLE
+    LTEXT           "代理服务器地址:",IDC_STA_PROADD,98,87,60,9,NOT WS_VISIBLE
+    EDITTEXT        IDC_EDIT_PROPORT,193,102,58,18,ES_MULTILINE | ES_AUTOHSCROLL | NOT WS_VISIBLE
+    LTEXT           "代理服务器端口:",IDC_STA_PROPORT,193,87,60,9,NOT WS_VISIBLE
 END
 
 IDD_UPDATEDLG DIALOGEX 0, 0, 309, 212
@@ -1167,6 +1167,11 @@ END
 //
 
 IDD_LOGINDLG AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_LOGSETDLG AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
